tests/rosetta/out/Smalltalk/csv-data-manipulation.out
/tmp/csv-data-manipulation.st:6: parse error, expected ']'
